# Mlflow-local-wihout-DVC

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: script.py
docker/: Dockerfile.experiments  Dockerfile.server
experiments/: script.py
mlflow/mlruns/0/: meta.yaml
mlflow/mlruns/892827844983325843/: meta.yaml
mlflow/mlruns/892827844983325843/6393ee52e7dc4e67bd6568af2c0a3d7e/: meta.yaml
mlflow/mlruns/892827844983325843/6393ee52e7dc4e67bd6568af2c0a3d7e/metrics/: foo
mlflow/mlruns/892827844983325843/6393ee52e7dc4e67bd6568af2c0a3d7e/tags/: mlflow.runName  mlflow.source.name
mlruns/0/: meta.yaml
mlruns/483532956283962123/: meta.yaml
mlruns/483532956283962123/c0d49967ada8458ca565c8e418103322/: meta.yaml
mlruns/483532956283962123/c0d49967ada8458ca565c8e418103322/metrics/: foo
mlruns/483532956283962123/c0d49967ada8458ca565c8e418103322/tags/: mlflow.runName  mlflow.source.name
postgres-data/: postmaster.pid
postgres-data/base/1/: 2619  pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16388  16389  16396  16398  16415  16420  16427  16437  16442  16449  16452  16460  16474  16477  16495  16496  16503  16507  16508  16527  16537  16538  16539  16540  16545  16566  16578  16579  2224  2579  2604  2606  2608  2610  2619  2619_fsm  2620  (+25 more)
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
postgres-data/pg_xact/: 0000
scripts/: start-server.sh
